Fixed: Styles: More contrast dnd pointer in hover state

--- a/src/styles/themes/compact/sidebar/sidebar.styl
+++ b/src/styles/themes/compact/sidebar/sidebar.styl
@@ -249,6 +249,7 @@ body
   &[data-hover="true"]:before
     transform: translateX(0)
     opacity: 1
+    filter: contrast(200%)
 #root[data-drag="true"] .pointer
   opacity: 1
   z-index: 100
